--- a/login1.html
+++ b/login1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+ <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
     <style>
@@ -42,7 +42,11 @@
             font-size: 12px;
         }
         a {
-            text-decoration: none;
+            text-decoration: none ;
+        }
+        .meh{
+            font-size: 14px;
+            margin-left: 70px;
         }
         .btn {
            width: 220px;
@@ -54,6 +58,26 @@
            background-color: aqua;
            color: black(62, 61, 59);
            border:none
+        }
+        .btn1 {
+            width: 100px;
+           height: 20px;
+           border-radius: 20px;
+           margin-left: 2px;
+           margin-bottom: 8px;
+           margin-top: 20px;
+           border: none;
+           background-color: aqua;
+        }
+        .btn2 {
+            width: 109px;
+           height: 20px;
+           border-radius: 20px;
+           margin-left: 2px;
+           margin-bottom: 8px;
+           margin-top: 20px;
+           border: none;
+           background-color: aqua;
         }
     </style>
 </head>
@@ -69,9 +93,15 @@
             <label class="me"><input type="checkbox" />Remember me</label>
             <a href="#">Forget Password?</a>
             <button class="btn">Sign in</button>
-            <p>
-              Don't have acount? <a href="#"><b> Registrasi here</b></a>
+            <p class="meh">
+                Or Login With
             </p>
+            <button class="btn1">Google</button>
+            <button class="btn2">Facebook</button>
+            
+            <p>
+              Don't have acount? <a href="crate.html"><b> Registrasi here</b></a>
+            </p> 
         </div>
     <div class="container">
    </form>
